--- a/LAB3/Sprawko1/Sprawko1.tex
+++ b/LAB3/Sprawko1/Sprawko1.tex
@@ -33,32 +33,24 @@ Marcin Gruchała 248982\\}
     \vspace{1ex}
     $
     \begin{cases}
-        T_{wew}=\frac{Q_{g}+K_{cw}T_{zew}+T_{p} 0,25 K_{cw}}{1,25K_{cw}}\\
-        T_{p}=\frac{0,25Q_{g}+0,25T_{zew}K_{cw}+1,25T_{zew}K_{cw}}{1,25-0,0625K_{cw}+1,25K_{cp}}
-    \end{cases}
-    $
-    \\
-    \vspace{1ex}
-    $
-    \begin{cases}
         T_{wew}=\frac{Q_{g}+K_{cw}T_{zew}+0,25T_{p}K_{cw}}{1,25K_{cw}}\\
-        T_{p}=\frac{0,25Q_{g}+1,50T_{zew}K_{cw}}{1,25-0,0625K_{cw}+1,25K_{cp}}
+        T_{p}=\frac{0,2Q_{g}+0,2T_{zew}K_{cw}+T_{zew}K_{cw}}{0,2K_{cw}+K_{cp}}
     \end{cases}
     $
     \\
     \vspace{1ex}
     $
     \begin{cases}
-        T_{wew}=\frac{Q_{g}+K_{cw}T_{zew}+\frac{0,25Q_{g}+1,50T_{zew}K_{cw}}{1,25-0,0625K_{cw}+1,25K_{cp}} 0,25 K_{cw}}{1,25K_{cw}}\\
-        T_{p}=\frac{0,25Q_{g}+1,50T_{zew}K_{cw}}{1,25-0,0625K_{cw}+1,25K_{cp}}
+        T_{wew}=\frac{Q_{g}+K_{cw}T_{zew}+0,25K_{cw}\frac{0,2Q_{g}+0,2T_{zew}K_{cw}+T_{zew}K_{cw}}{0,2K_{cw}+K_{cp}}}{1,25K_{cw}}\\
+        T_{p}=\frac{0,2Q_{g}+0,2T_{zew}K_{cw}+T_{zew}K_{cw}}{0,2K_{cw}+K_{cp}}
     \end{cases}
     $
     \\
     \vspace{1ex}
     $
     \begin{cases}
-        T_{wew}=\frac{1000+23,53\cdot(-20)+\left[\frac{0,25\cdot1000+1,50\cdot(-20)\cdot 23,53}{1,25-0,0625\cdot23,53+1,25\cdot1,96}\right] \cdot(0,25 \cdot23,53)}{1,25\cdot23,53}\approx\\
-        T_{p}=\frac{0,25\cdot1000+1,50\cdot(-20)\cdot23,53}{1,25-0,0625\cdot 23,53+1,25\cdot1,96}\approx
+        T_{wew}=\frac{1000+23,53\cdot(-20)+0,25\cdot23,53\frac{0,2\cdot1000+0,2\cdot(-20)\cdot23,53+(-20)\cdot1,96}{0,2\cdot23,53+1,96}}{1,25\cdot23,53} \approx 20\\
+        T_{p}=\frac{0,2\cdot1000+0,2\cdot(-20)\cdot23,53+(-20)\cdot1,96}{0,2\cdot23,53+1,96} \approx 10
     \end{cases}
     $
 \end{center}
