--- a/LAB5/Sprawko3/sprawko4.tex
+++ b/LAB5/Sprawko3/sprawko4.tex
@@ -42,7 +42,7 @@ $$
 Schemat \ blokowy \ w \ Simulink:
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=1\textwidth]{uklad.png}
+    \includegraphics[width=1\textwidth]{./Screeny/uklad.png}
     \label{fig:my_label}
 \end{figure}
 
@@ -115,7 +115,7 @@ x_s(t)=0, \ x_w(t)=2
 $$
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=0.985\textwidth]{analityczne3a.png}
+    \includegraphics[width=0.985\textwidth]{./Screeny/analityczne3a.png}
     \label{fig:my_label}
 \end{figure}
 
@@ -131,7 +131,7 @@ $$
 Warunek początkowy $\dot{x}(0)=0\Rightarrow x(0)=2$
 \begin{figure}
     \centering
-    \includegraphics[width=0.928\textwidth]{schematiwykres3a.png}
+    \includegraphics[width=0.928\textwidth]{./Screeny/schematiwykres3a.png}
     \label{fig:my_label}
 \end{figure}
 \newpage
@@ -154,7 +154,7 @@ x_s(t)=-4e^{-t}, \ x_w(t)=2
 $$
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=0.928\textwidth]{anailtyczne3b.png}
+    \includegraphics[width=0.928\textwidth]{./Screeny/anailtyczne3b.png}
     \label{fig:my_label}
 \end{figure}
 \begin{flushleft}
@@ -169,7 +169,7 @@ Warunek początkowy $\dot{x}(0)=4\Rightarrow x(0)=-4e^{0}+2=-2\Rightarrow x(0)=-
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=0.928\textwidth]{symulacja3B.png}
+    \includegraphics[width=0.928\textwidth]{./Screeny/symulacja3B.png}
     \label{fig:my_label}
 \end{figure}
 
@@ -198,13 +198,13 @@ $$
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=\textwidth]{x_0.png}
+    \includegraphics[width=\textwidth]{./Screeny/x_0.png}
     \label{fig:my_label}
 \end{figure}
 Następnie zajmujemy się zbudowaniem schematu:\\
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=\textwidth]{schemat_0w.png}
+    \includegraphics[width=\textwidth]{./Screeny/schemat_0w.png}
     \label{fig:my_label}
 \end{figure}
 
@@ -213,7 +213,7 @@ Następnie zajmujemy się zbudowaniem schematu:\\
 Symulacja daje nam taki wykres:\\
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=0.45\textwidth]{x_0_sym.png}
+    \includegraphics[width=0.45\textwidth]{./Screeny/x_0_sym.png}
     \label{fig:my_label}
 \end{figure}
 
@@ -237,7 +237,7 @@ $$
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=\textwidth]{x_2.png}
+    \includegraphics[width=\textwidth]{./Screeny/x_2.png}
     \label{fig:my_label}
 \end{figure}
 Jak widać wykres jest linią prostą co oznacza ponieważ w równaniu szczególnym pozostało jedynie wymuszenie.
@@ -247,7 +247,7 @@ Jak widać wykres jest linią prostą co oznacza ponieważ w równaniu szczegól
 Symulacja daje nam taki wykres:\\
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=0.45\textwidth]{x_2_sym.png}
+    \includegraphics[width=0.45\textwidth]{./Screeny/x_2_sym.png}
     \label{fig:my_label}
 \end{figure}
 
