--- a/LAB5/Sprawko3/Latex/Sprawko3.tex
+++ b/LAB5/Sprawko3/Latex/Sprawko3.tex
@@ -42,7 +42,7 @@ $$
 Schemat \ blokowy \ w \ Simulink:
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=1\textwidth]{./Screeny/uklad.png}
+    \includegraphics[width=1\textwidth]{uklad.png}
     \label{fig:my_label}
 \end{figure}
 
@@ -96,7 +96,6 @@ Rozwiązanie ogólne:
 $$
 x(t)=x_s(t)+x_w(t)=Ae^{-t}+2
 $$
-\newpage
 \begin{flushleft}
     a) Warunek początkowy $\dot{x}(0)=0$
 \end{flushleft}
@@ -113,9 +112,10 @@ $$
 $$
 x_s(t)=0, \ x_w(t)=2
 $$
+\newpage
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=0.985\textwidth]{./Screeny/analityczne3a.png}
+    \includegraphics[width=0.985\textwidth]{analityczne3a.png}
     \label{fig:my_label}
 \end{figure}
 
@@ -131,7 +131,7 @@ $$
 Warunek początkowy $\dot{x}(0)=0\Rightarrow x(0)=2$
 \begin{figure}
     \centering
-    \includegraphics[width=0.928\textwidth]{./Screeny/schematiwykres3a.png}
+    \includegraphics[width=0.928\textwidth]{schematiwykres3a.png}
     \label{fig:my_label}
 \end{figure}
 \newpage
@@ -154,11 +154,10 @@ x_s(t)=-4e^{-t}, \ x_w(t)=2
 $$
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=0.928\textwidth]{./Screeny/anailtyczne3b.png}
+    \includegraphics[width=0.928\textwidth]{anailtyczne3b.png}
     \label{fig:my_label}
 \end{figure}
 \begin{flushleft}
-\newpage
 Rozwiązanie symulacyjne oraz jego wykres:
 
 \end{flushleft}
@@ -169,19 +168,14 @@ Warunek początkowy $\dot{x}(0)=4\Rightarrow x(0)=-4e^{0}+2=-2\Rightarrow x(0)=-
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=0.928\textwidth]{./Screeny/symulacja3B.png}
+    \includegraphics[width=0.928\textwidth]{symulacja3B.png}
     \label{fig:my_label}
 \end{figure}
-
-\newpage
-
-
-
 \begin{flushleft}
 c) Warunek początkowy $x(0)=0$\\
 
 \end{flushleft}
-Rozwiązanie analityczne, jego wykres wraz z wykresem skłądowych jego rozwiązania:\\
+Rozwiązanie analityczne, jego wykres wraz z wykresem składowych jego rozwiązania:\\
 $$
 x(t)=Ae^{-t}+2
 $$
@@ -198,13 +192,13 @@ $$
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=\textwidth]{./Screeny/x_0.png}
+    \includegraphics[width=\textwidth]{x_0.png}
     \label{fig:my_label}
 \end{figure}
 Następnie zajmujemy się zbudowaniem schematu:\\
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=\textwidth]{./Screeny/schemat_0w.png}
+    \includegraphics[width=\textwidth]{schemat_0w.png}
     \label{fig:my_label}
 \end{figure}
 
@@ -213,14 +207,14 @@ Następnie zajmujemy się zbudowaniem schematu:\\
 Symulacja daje nam taki wykres:\\
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=0.45\textwidth]{./Screeny/x_0_sym.png}
+    \includegraphics[width=0.45\textwidth]{x_0_sym.png}
     \label{fig:my_label}
 \end{figure}
 
 \begin{flushleft}
 d) Warunek początkowy $x(0)=2$\\
 \end{flushleft}
-Rozwiązanie analityczne, jego wykres wraz z wykresem skłądowych jego rozwiązania:\\
+Rozwiązanie analityczne, jego wykres wraz z wykresem składowych jego rozwiązania:\\
 $$
 x(t)=Ae^{-t}+2
 $$
@@ -237,7 +231,7 @@ $$
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=\textwidth]{./Screeny/x_2.png}
+    \includegraphics[width=\textwidth]{x_2.png}
     \label{fig:my_label}
 \end{figure}
 Jak widać wykres jest linią prostą co oznacza ponieważ w równaniu szczególnym pozostało jedynie wymuszenie.
@@ -247,8 +241,30 @@ Jak widać wykres jest linią prostą co oznacza ponieważ w równaniu szczegól
 Symulacja daje nam taki wykres:\\
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=0.45\textwidth]{./Screeny/x_2_sym.png}
+    \includegraphics[width=0.45\textwidth]{x_2_sym.png}
     \label{fig:my_label}
 \end{figure}
-
+\section{Wnioski}
+Z badań wynika żę wyniki uzyskane metodą analityczną oraz metądą symulacyjną są takie same. Podczas zadania przekonaliśmy się jak szybko i wygodnie za pomocą programu Simulink można wyliczyć równanie różniczkowe oraz zbadać jego wykres. 
+\section{Załączniki}
+\begin{figure}
+    \centering
+    \includegraphics{kod1.png}
+    \label{fig:my_label}
+\end{figure}
+\begin{figure}
+    \centering
+    \includegraphics{kod2.png}
+    \label{fig:my_label}
+\end{figure}
+\begin{figure}
+    \centering
+    \includegraphics[width=0.6\textwidth]{kod_x_0.png}
+    \label{fig:my_label}
+\end{figure}
+\begin{figure}
+    \centering
+    \includegraphics[width=0.6\textwidth]{kod_x_2.png}
+    \label{fig:my_label}
+\end{figure}
 \end{document}
