--- a/LAB6/Sprawko4/Latex/Sprawko4.tex
+++ b/LAB6/Sprawko4/Latex/Sprawko4.tex
@@ -30,7 +30,7 @@
 
 
 
-
+Badanie odpowiedzi czasowej członu oscylacyjnego zgodnie z tabelą:
 \begin{center}
 \begin{tabular}{ |c|c|c|c| }
     \hline
@@ -47,6 +47,7 @@
     $1<\xi$     & $1.5$  & Rysunek \ref{fig:bieguny_ksi_1_5}    & Rysunek \ref{fig:ksi_1_5}\\ 
     \hline
 \end{tabular}
+
 \end{center}
 
 
@@ -60,16 +61,16 @@ Schemat simulink:\\
     \caption{Schemat simulinka}
     \label{fig:schemat}
  \end{figure}
- 
+ \newpage
  
 \section{Wykresy rozwiązań.}
 
 
 \begin{flushleft}
- a)  Przedział: $-1>\xi$, Wartośc: $\xi=-1.5$\\
+ a)  Przedział: $-1>\xi$, Wartość: $\xi=-1.5$\\
  
  
-  Wykres biegónów:\\
+  Wykres biegunów:\\
  \begin{figure}[h!]
     \centering
     \includegraphics[scale=0.6]{bieguny_ksi_-1_5.png}
@@ -87,9 +88,9 @@ Schemat simulink:\\
  \end{figure}
  
  
- 
- b) Przedział: $-1<\xi<0$, Wartośc: $\xi=-0.2$\\
-  Wykres biegónów:\\
+ \newpage
+ b) Przedział: $-1<\xi<0$, Wartość: $\xi=-0.2$\\
+  Wykres biegunów:\\
  \begin{figure}[h!]
     \centering
     \includegraphics[scale=0.6]{bieguny_ksi_-0_2.png}
@@ -106,11 +107,11 @@ Schemat simulink:\\
     \label{fig:ksi_-0_2}
  \end{figure}
  
+ \newpage
+ c) Przedział: $\xi=0$, Wartość: $\xi=0$\\
  
- c) Przedział: $\xi=0$, Wartośc: $\xi=0$\\
  
- 
- Wykres biegónów:\\
+ Wykres biegunów:\\
  \begin{figure}[h!]
     \centering
     \includegraphics[scale=0.6]{biegunyksi0png.png}
@@ -126,10 +127,10 @@ Schemat simulink:\\
      \caption{Wykres skokowy, dla $\xi=0$}
      \label{fig:ksi_0}
  \end{figure}
- d)Przedział: $0<\xi<1$, Wartośc: $\xi=0.5$\\
+ \newpage
+ d)Przedział: $0<\xi<1$, Wartość: $\xi=0.5$\\
  
- 
-  Wykres biegónów:\\
+  Wykres biegunów:\\
  \begin{figure}[h!]
     \centering
     \includegraphics[scale=0.6]{biegunyksi05.png}
@@ -137,7 +138,7 @@ Schemat simulink:\\
     \label{fig:bieguny_ksi_0_5}
  \end{figure}
  
- 
+
  Wykres odpowiedzi skokowej:\\
  \begin{figure}[h!]
     \centering
@@ -150,8 +151,8 @@ Schemat simulink:\\
  \newpage
  
  
- e) Przedział: $1<\xi$, Wartośc: $\xi=1.5$\\
-  Wykres biegónów:\\
+ e) Przedział: $1<\xi$, Wartość: $\xi=1.5$\\
+  Wykres biegunów:\\
  \begin{figure}[h!]
     \centering
     \includegraphics[scale=0.6]{biegunykis1,5.png}
@@ -168,7 +169,31 @@ Schemat simulink:\\
     \label{fig:ksi_1_5}
  \end{figure}
 \end{flushleft}
- \newpage
+
 \section{Wnioski.}
+
+
+\par Ćwiczenie pokazuje wpływ wartości współczynnika $\xi$ na równanie drugiego stopnia. Jak widać na wykresach po tym w jakim przedziale znajduje się $\xi$ można stwierdzić stabilność lub niestabilność układu.
+\newpage
+\section{Załączniki}
+
+ \begin{figure}[h!]
+    \centering
+    \includegraphics[scale=0.6]{kod1.png}
+
+    \label{fig:ksi_1_5}
+ \end{figure}
+ 
+ \begin{figure}[h!]
+    \centering
+    \includegraphics[scale=0.6]{kod2.png}
+    \label{fig:ksi_1_5}
+ \end{figure}
+
+
+
+
+
+
 
 \end{document}
